tests/ppx-errors/test.out.expected
Characters 0-29:
  [@@@landmark "random string"];;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: ppx_landmark: expecting payload in ["auto","auto-off","disable"]
Characters 19-48:
  [@@@landmark "random string"];;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: ppx_landmark: expecting payload in ["auto","auto-off"]
Characters 5-13:
  [@@@landmark "auto" "no auto"];;
      ^^^^^^^^
Error: ppx_landmark: payload is not a string
Characters 10-33:
  let () = (print_endline "hello")[@landmark "too"][@landmark "many"][@landmark "landmarks"];;
           ^^^^^^^^^^^^^^^^^^^^^^^
Error: ppx_landmark: too many attributes
Characters 1-42:
  let[@landmark] () = print_endline "hello";;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: ppx_landmark: this landmark annotation requires a name argument
Characters 13-35:
     let[@landmark] _ = 2+2 in ();;
     ^^^^^^^^^^^^^^^^^^^^^^
Error: ppx_landmark: this landmark annotation requires a name argument

